Use vmin for canvas border

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             max-width: 45vw;
             max-height: 90vh;
             box-sizing: border-box;
-            border: 8px solid black;
+            border: .5vmin solid black;
         }
     </style>
 </head>
