Add loading message

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             box-sizing: border-box;
             border: .5vmin solid black;
         }
+        .waiting {
+            border-color: red;
+        }
     </style>
 </head>
 <body>
