Uploads working, raggedy though

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 <body>
     <canvas id="left"></canvas>
     <canvas id="right"></canvas>
+    <form>
+        <input type="file" id="fileElem" accept="image/*">
+    </form>  
 </body>
 </html>
 <script src="main.js"></script>
