--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chrsprmnt</title>
+    <title>Characterize</title>
     <style>
         body {
             margin: 0;
@@ -24,8 +24,8 @@
     </style>
 </head>
 <body>
-    <canvas id="left"></canvas>
-    <canvas id="right"></canvas>
+    <canvas id="alpha"></canvas>
+    <canvas id="image"></canvas>
     <form>
         <input type="file" id="fileElem" accept="image/*">
     </form>  
