--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characterize</title>
     <style>
-        body {
+        /* body {
             margin: 0;
             display: flex;
             align-items: center;
@@ -20,7 +20,7 @@
         }
         .waiting {
             border-color: red;
-        }
+        } */
     </style>
 </head>
 <body>
