IN-PROGRESS convert to preact

--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characterize | Image to Text Converter</title>
-    <style>
-        main {
-            display: flex;
-            flex-flow: row wrap;
-        }
-        #source {
-            height: 50vh;
-        }
-        #target {
-            margin: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+    <div id="App"></div>
+</body>
+
+</html>
+<script src="main.js" type="module"></script>
+
+
+<!-- 
 </head>
 <body>
-    <form>
-        <input type="file" id="fileElem" accept="image/*">
-    </form>
-    <main>
-        <img id="source" alt="The image to be characterized">
-        <pre id="target"></pre>
-    </main>    
+<form>
+    <input type="file" id="fileElem" accept="image/*">
+</form>
+<main>
+    <img id="source" alt="The image to be characterized">
+    <pre id="target"></pre>
+</main>    
 </body>
-</html>
-<script src="main.js"></script>
+</html> -->
